--- a/css/main.css
+++ b/css/main.css
@@ -4,19 +4,19 @@ html {
   font-family: Georgia, sans-serif;
 }
 
-h1 {
+.link-card h2 {
   font-family: 'Dosis', sans-serif;
   font-size: 1.5rem;
+  margin: 0;
 }
 
 .link-card {
   color: #512200;
   background-color: #dcd4cd;
-
   padding: .4em .75em .5em;
   border-radius: 8px;
   text-decoration: none;
-  font-size: 1.125rem;
+  font-size: .875;
   display: inline-block;
   border: 3px solid #9a816d;
 }
@@ -27,12 +27,11 @@ h1 {
 
 .btn-wrap {
   color: #fff;
-  background-color: #9a816d;
+  background-color: #785439;
   font-family: 'Dosis', sans-serif;
   padding: .4em .75em .5em;
   border-radius: 8px;
   text-decoration: none;
   font-size: 1rem;
   display: inline-block;
-  border: 2px solid #000;
 }
