--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ html {
 }
 
 .link-card h2 {
-  font-family: 'Dosis', sans-serif;
+  font-family: "Dosis", sans-serif;
   font-size: 1.5rem;
   margin: 0;
 }
@@ -22,13 +22,13 @@ html {
 }
 
 .link-card:hover {
-  background-color: #cabdb2
+  background-color: #cabdb2;
 }
 
 .btn-wrap {
   color: #fff;
   background-color: #785439;
-  font-family: 'Dosis', sans-serif;
+  font-family: "Dosis", sans-serif;
   padding: .4em .75em .5em;
   border-radius: 8px;
   text-decoration: none;
