--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ html {
 }
 
 .link-card h2 {
-  font-family: "Dosis", sans-serif;
+  font-family: Dosis, sans-serif;
   font-size: 1.5rem;
   margin: 0;
 }
@@ -16,7 +16,7 @@ html {
   padding: .4em .75em .5em;
   border-radius: 8px;
   text-decoration: none;
-  font-size: .875rem;
+  font-size: 1rem;
   display: inline-block;
   border: 3px solid #9a816d;
 }
@@ -28,7 +28,7 @@ html {
 .btn-wrap {
   color: #f0eee8;
   background-color: #785439;
-  font-family: "Dosis", sans-serif;
+  font-family: Dosis, sans-serif;
   padding: .4em .75em .5em;
   border-radius: 8px;
   text-decoration: none;
@@ -37,5 +37,5 @@ html {
 }
 
 a dl {
-
+ font-size: .875rem;
 }
