--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ html {
 .link-card h2 {
   font-family: Dosis, sans-serif;
   font-size: 1.5rem;
-  margin: 0;
+   margin: 0;
 }
 
 .link-card {
@@ -41,5 +41,9 @@ a dl {
 }
 
 div * {
-display: inline-block;
+  display: inline-block;
+}
+
+* {
+
 }
