--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,7 @@ html {
   text-decoration: none;
   font-size: 1rem;
   display: inline-block;
+  text-align: center;
 }
 
 a dl {
@@ -44,6 +45,15 @@ div * {
   display: inline-block;
 }
 
-* {
-box-sizing:inherit;
+.btn .btn-wrap {
+  text-align: center;
+}
+
+h2 {
+  padding: 1rem 0 0;
+  font-weight:bold;
+}
+
+dl {
+  padding: 1rem 0;
 }
