--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ html {
   font-size: 1rem;
   display: inline-block;
   text-align: center;
+  margin-left: 6rem;
 }
 
 a dl {
@@ -50,10 +51,13 @@ div * {
 }
 
 h2 {
-  padding: 1rem 0 0;
-  font-weight:bold;
+  padding: .75rem 0 0;
 }
 
 dl {
   padding: 1rem 0;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
 }
