--- a/css/main.css
+++ b/css/main.css
@@ -34,8 +34,6 @@ html {
   text-decoration: none;
   font-size: 1rem;
   display: inline-block;
-  text-align: center;
-  margin-left: 6rem;
 }
 
 a dl {
@@ -46,7 +44,7 @@ div * {
   display: inline-block;
 }
 
-.btn .btn-wrap {
+div .btnwrap {
   text-align: center;
 }
 
