--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ h2 {
   text-decoration: none;
   font-size: 1.125rem;
   display: inline-block;
-
+  margin: 0 0 .5em;
 }
 
 dl {
@@ -59,7 +59,6 @@ div * {
 
 dd {
   font-style: italic;
-  text-align: right;
 }
 
 footer {
